--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -14,10 +14,15 @@ pipeline {
             }
         }
 
-        stage('Build and Test') {
+        stage('Build') {
             steps {
                 script {
                     sh 'ls -ltr'
+
+                    sh '''
+                    cd spring-boot-app
+                    mvn clean package
+                    '''
                 }
             }
         }
