--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -32,5 +32,12 @@ pipeline {
             }
         }
 
+        stage('Static Code Analysis') {
+          steps {
+            withSonarQubeEnv('sonar-server') {
+                sh 'cd spring-boot-app && mvn sonar:sonar -Dsonar.projectName=spring-boot-app -Dsonar.projectKey=spring-boot-app '
+            }
+          }
+        }
     }
 }
