--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -34,7 +34,7 @@ pipeline {
 
         stage('Static Code Analysis') {
           steps {
-            withSonarQubeEnv('Sonar-server') {
+            withSonarQubeEnv('sonar-server') {
                 sh 'cd spring-boot-app && mvn sonar:sonar -Dsonar.projectName=spring-boot-app -Dsonar.projectKey=spring-boot-app '
             }
           }
