--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -74,11 +74,9 @@ pipeline {
         stage('Nexus') {
             steps {
                 echo 'Nexus...'
-                script {
-                    configFileProvider([configFile(fileId: 'nexus', variable: 'nexus')]) {
+                configFileProvider([configFile(fileId: 'nexus', variable: 'nexus')]) {
                       cd spring-boot-app
-                      sh 'mvn deploy --settings $MAVEN_SETTINGS'
-                    }
+                      sh 'mvn deploy --settings $nexus'
                 }
             }
         }
