--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -33,6 +33,16 @@ pipeline {
                 '''
             }
         }
+
+        stage('Run Unit Tests') {
+            steps {
+                echo 'Running unit tests...'
+                sh '''
+                   cd spring-boot-app
+                   mvn test
+                '''
+            }
+        }
     }
 
     post {
