--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -43,6 +43,20 @@ pipeline {
                 '''
             }
         }
+
+        stage('Static Code Analysis') {
+            steps {
+                echo 'Running SonarQube analysis...'
+                withSonarQubeEnv('sonar-server') {
+                    sh '''
+                       cd spring-boot-app
+                       mvn sonar:sonar \
+                       -Dsonar.projectKey=spring-boot-app \
+                       -Dsonar.projectName=spring-boot-app
+                    '''
+                }
+            }
+        }
     }
 
     post {
