--- a/spring-boot-app/pom.xml
+++ b/spring-boot-app/pom.xml
@@ -72,13 +72,9 @@
 
     <distributionManagement>
         <repository>
-            <id>maven-releases</id>
-            <url>http://35.154.196.245:8081/repository/maven-releases/</url>
+            <id>spring-boot-app</id>
+            <url>http://13.234.231.57:8081/repository/spring-boot-app/</url>
         </repository>
-        <snapshotRepository>
-            <id>maven-snapshots</id>
-            <url>http://35.154.196.245:8081/repository/maven-snapshots/</url>
-        </snapshotRepository>
     </distributionManagement>
 
 </project>
