--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -75,6 +75,13 @@ pipeline {
                 }
             }
         }
+
+        stage('Verify Build Output') {
+            steps {
+                echo 'Listing files in target/ directory...'
+                sh 'ls -l target/'
+            }
+        }
     }
 
     post {
