--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -79,8 +79,10 @@ pipeline {
         stage('Verify Build Output') {
             steps {
                 echo 'Listing files in target/ directory...'
-                cd spring-boot-app
-                sh 'ls -l target/'
+                sh '''
+                    cd ${WORKSPACE}/spring-boot-app || exit 1
+                    ls -l target/ || echo "No target/ directory found. Build might have failed."
+                '''
             }
         }
     }
