--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -76,13 +76,24 @@ pipeline {
             }
         }
 
-        stage('Verify Build Output') {
+        stage('Upload to Nexus') {
             steps {
-                echo 'Listing files in target/ directory...'
-                sh '''
-                    cd ${WORKSPACE}/spring-boot-app || exit 1
-                    ls -l target/ || echo "No target/ directory found. Build might have failed."
-                '''
+                echo 'Uploading artifact to Nexus repository...'
+                nexusArtifactUploader artifacts: [
+                    [
+                        artifactId: 'spring-boot-demo',
+                        classifier: '',
+                        file: 'spring-boot-app/target/spring-boot-web-1.0.jar',
+                        type: 'jar'
+                    ]
+                ],
+                credentialsId: NEXUS_CREDENTIALS_ID,
+                groupId: 'com.abhishek',
+                nexusUrl: NEXUS_URL,
+                nexusVersion: 'nexus3',
+                protocol: 'http',
+                repository: NEXUS_REPO,
+                version: '1.0'
             }
         }
     }
