--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -6,7 +6,7 @@ pipeline {
     }
 
      environment {
-        NEXUS_URL = 'http://13.234.231.57:8081'
+        NEXUS_URL = '13.234.231.57:8081'
         NEXUS_REPO = 'spring-boot-app'
         NEXUS_CREDENTIALS_ID = 'nexus-credentials'
     }
