--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -9,6 +9,7 @@ pipeline {
         NEXUS_URL = '13.234.231.57:8081'
         NEXUS_REPO = 'spring-boot-app'
         NEXUS_CREDENTIALS_ID = 'nexus-credentials'
+        ARTIFACT_VERSION = "${BUILD_NUMBER}"
     }
 
     stages {
@@ -93,7 +94,7 @@ pipeline {
                 nexusVersion: 'nexus3',
                 protocol: 'http',
                 repository: NEXUS_REPO,
-                version: '1.0'
+                version: ARTIFACT_VERSION
             }
         }
     }
