--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -10,6 +10,8 @@ pipeline {
         NEXUS_REPO = 'spring-boot-app'
         NEXUS_CREDENTIALS_ID = 'nexus-credentials'
         ARTIFACT_VERSION = "${BUILD_NUMBER}"
+        DOCKER_IMAGE = "shravankumarp/spring-boot-app:${BUILD_NUMBER}"
+        REGISTRY_CREDENTIALS = credentials('docker-cred')
     }
 
     stages {
@@ -95,6 +97,15 @@ pipeline {
                 protocol: 'http',
                 repository: NEXUS_REPO,
                 version: ARTIFACT_VERSION
+            }
+        }
+
+        stage('Build Image') {
+            steps {
+                echo 'Build Image...'
+                script {
+                    sh 'cd spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
+                }
             }
         }
     }
