--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -117,6 +117,19 @@ pipeline {
                 '''
             }
         }
+
+        stage('Push Image') {
+            steps {
+                echo 'Build Image...'
+                script {
+                    def dockerImage = docker.image("${DOCKER_IMAGE}")
+                    docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+                        dockerImage.push()
+                    }
+                }
+            }
+        }
+
         stage('Cleanup Trivy Cache') {
             steps {
                 echo 'Cleaning up Trivy cache...'
