--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -5,7 +5,7 @@ pipeline {
         maven "maven3"
     }
 
-     environment {
+    environment {
         NEXUS_URL = '13.234.231.57:8081'
         NEXUS_REPO = 'spring-boot-app'
         NEXUS_CREDENTIALS_ID = 'nexus-credentials'
@@ -100,31 +100,31 @@ pipeline {
             }
         }
 
-        stage('Build Image') {
+        stage('Build Docker Image') {
             steps {
-                echo 'Build Image...'
-                script {
-                    sh 'cd spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
-                }
+                echo 'Building Docker image...'
+                sh '''
+                   cd spring-boot-app
+                   docker build -t ${DOCKER_IMAGE} .
+                '''
             }
         }
 
         stage('Scan Docker Image') {
             steps {
-                echo 'Scanning Docker image...'
+                echo 'Scanning Docker image using Trivy...'
                 sh '''
-                    trivy image ${DOCKER_IMAGE} > trivyimage.txt
+                   trivy image ${DOCKER_IMAGE} > trivyimage.txt
                 '''
             }
         }
 
-        stage('Push Image') {
+        stage('Push Docker Image to Docker Hub') {
             steps {
-                echo 'Build Image...'
+                echo 'Pushing Docker image to Docker Hub...'
                 script {
-                    def dockerImage = docker.image("${DOCKER_IMAGE}")
                     docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
-                        dockerImage.push()
+                        sh "docker push ${DOCKER_IMAGE}"
                     }
                 }
             }
