--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -121,17 +121,15 @@ pipeline {
 
         stage('Push Image') {
             steps {
-                echo 'Push...'
-                sh '''
-                   def dockerImage = docker.image("${DOCKER_IMAGE}")
-                   withDockerRegistry(credentialsId: 'docker-cred', url: 'https://registry.hub.docker.com') {
+                echo 'Pushing Docker image to registry...'
+                script {
+                    def dockerImage = docker.image("${DOCKER_IMAGE}")
+                    docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
                         dockerImage.push()
                     }
-                '''
+                }
             }
         }
-
-        
 
         stage('Cleanup Trivy Cache') {
             steps {
