--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -137,6 +137,27 @@ pipeline {
                 sh 'rm -rf /var/lib/jenkins/.cache/trivy/*'
             }
         }
+
+        stage('Update Deployment File') {
+            environment {
+                GIT_REPO_NAME = "CI-CD-Pipeline"
+                GIT_USER_NAME = "Shravankumar1989"
+            }
+            steps {
+                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                    sh '''
+                        echo 'Update Deployment File...'
+                        git config user.email "Shravansahan@gmail.com"
+                        git config user.name "Shravankumar Patil"
+                        BUILD_NUMBER=${BUILD_NUMBER}
+                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-manifests/deployment.yml
+                        git add spring-boot-app-manifests/deployment.yml
+                        git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                    '''
+                }
+            }
+        }
     }
 
     post {
