--- a/spring-boot-app-manifests/service.yml
+++ b/spring-boot-app-manifests/service.yml
@@ -4,7 +4,7 @@ metadata:
   name: spring-boot-app-service
   namespace: default
 spec:
-  type: NodePort
+  type: ClusterIP   # Changed service type to ClusterIP
   ports:
   - name: http
     port: 80
