--- a/spring-boot-app-manifests/service.yml
+++ b/spring-boot-app-manifests/service.yml
@@ -4,11 +4,11 @@ metadata:
   name: spring-boot-app-service
   namespace: default
 spec:
-  type: ClusterIP   # Changed service type to ClusterIP
+  type: NodePort
   ports:
   - name: http
     port: 80
-    targetPort: 8888
+    targetPort: 8080
     protocol: TCP
   selector:
     app: spring-boot-app
