--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -131,6 +131,15 @@ pipeline {
             }
         }
 
+        stage('Remove Local Docker Image') {
+            steps {
+                echo 'Removing Docker image from local...'
+                sh '''
+                   docker rmi ${DOCKER_IMAGE} || true
+                '''
+            }
+        }
+
         stage('Cleanup Trivy Cache') {
             steps {
                 echo 'Cleaning up Trivy cache...'
