--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -152,27 +152,12 @@ pipeline {
                             # Set Git configuration
                             git config --global user.email "Shravansahan@gmail.com"
                             git config --global user.name "Shravankumar Patil"
-        
-                            # Ensure the latest changes are pulled from remote
-                            git remote set-url origin https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git
-                            
-                            # Set upstream tracking if not already set
-                            git branch --set-upstream-to=origin/main main || true
-                            
-                            # Pull the latest changes
-                            git pull origin main
-                            
+                            BUILD_NUMBER=${BUILD_NUMBER}
                             # Replace placeholder with build number in the deployment YAML
                             sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-manifests/deployment.yml
-                            
-                            # Stage all changes
-                            git add .
-                            
-                            # Commit the changes
+                            git add spring-boot-app-manifests/deployment.yml
                             git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                            
-                            # Push the changes to the remote repository
-                            git push origin HEAD:main
+                            git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                         '''
                     }
                 }
