--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -140,7 +140,7 @@ pipeline {
 
         stage('Update Deployment File') {
             environment {
-                GIT_REPO_NAME = 'CI-CD-Pipeline'
+                GIT_REPO_NAME = 'spring-boot-app-manifests'  // Updated repository name
                 GIT_USER_NAME = 'Shravankumar1989'
             }
             steps {
@@ -152,12 +152,16 @@ pipeline {
                             # Set Git configuration
                             git config --global user.email "Shravansahan@gmail.com"
                             git config --global user.name "Shravankumar Patil"
-                            BUILD_NUMBER=${BUILD_NUMBER}
-                            # Replace placeholder with build number in the deployment YAML
-                            sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-manifests/deployment.yml
-                            git add spring-boot-app-manifests/deployment.yml
+        
+                            # Replace placeholder with the build number in the deployment YAML
+                            sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" deployment.yml
+        
+                            # Add and commit changes
+                            git add deployment.yml
                             git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                            git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+        
+                            # Push changes to the repository
+                            git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git HEAD:main
                         '''
                     }
                 }
