--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -138,36 +138,27 @@ pipeline {
             }
         }
 
-        stage('Checkoute') {
-            steps {
-                git branch: 'main', url: 'https://github.com/Shravankumar1989/spring-boot-app-manifests.git'
-            }
-        }
         stage('Update Deployment File') {
+            environment {
+                GIT_REPO_NAME = "CI-CD-Pipeline"
+                GIT_USER_NAME = "Shravankumar1989"
+            }
             steps {
-                script {
-                    withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                       sh '''
-                            echo 'Updating Deployment File...'
-                            
-                            # Set Git configuration
-                            git config --global user.email "Shravansahan@gmail.com"
-                            git config --global user.name "Shravankumar Patil"
-        
-                            # Replace placeholder with the build number in the deployment YAML
-                            sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" deployment.yml
-        
-                            # Add and commit changes
-                            git add deployment.yml
-                            git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-        
-                            # Push changes to the repository
-                            git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git HEAD:main
-                        '''
-                    }
+                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                    sh '''
+                        echo 'Update Deployment File...'
+                        git config user.email "Shravansahan@gmail.com"
+                        git config user.name "Shravankumar Patil"
+                        BUILD_NUMBER=${BUILD_NUMBER}
+                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-manifests/deployment.yml
+                        git add spring-boot-app-manifests/deployment.yml
+                        git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                    '''
                 }
             }
         }
+
 
         stage('Remove Local Docker Image') {
             steps {
