--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -150,7 +150,8 @@ pipeline {
                         git config user.email "Shravansahan@gmail.com"
                         git config user.name "Shravankumar Patil"
                         BUILD_NUMBER=${BUILD_NUMBER}
-                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-manifests/deployment.yml
+                        NEW_IMAGE_NAME = "shravankumarp/spring-boot-app:${BUILD_NUMBER}"
+                        sed -i 's|image: .*|image: $NEW_IMAGE_NAME|' spring-boot-app-manifests/deployment.yml
                         git pull origin main
                         git add .
                         git commit -m "Update deployment image to version ${BUILD_NUMBER}"
