--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -150,8 +150,7 @@ pipeline {
                         git config user.email "Shravansahan@gmail.com"
                         git config user.name "Shravankumar Patil"
                         BUILD_NUMBER=${BUILD_NUMBER}
-                        NEW_IMAGE_NAME = "shravankumarp/spring-boot-app:${BUILD_NUMBER}"
-                        sed -i 's|image: .*|image: $NEW_IMAGE_NAME|' spring-boot-app-manifests/deployment.yml
+                        sed -i 's|shravankumarp/spring-boot-app|shravankumarp/spring-boot-app:${BUILD_NUMBER}|' spring-boot-app-manifests/deployment.yml
                         git pull origin main
                         git add .
                         git commit -m "Update deployment image to version ${BUILD_NUMBER}"
