Update deployment image to version 57

--- a/spring-boot-app-manifests/deployment.yml
+++ b/spring-boot-app-manifests/deployment.yml
@@ -17,6 +17,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: shravankumarp/spring-boot-app:53
+        image: shravankumarp/spring-boot-app:${BUILD_NUMBER}:53
         ports:
         - containerPort: 8080
