--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -143,7 +143,7 @@ pipeline {
                         git config user.email "Shravansahan@gmail.com"
                         git config user.name "Shravankumar Patil"
                         BUILD_NUMBER=${BUILD_NUMBER}
-                        sed -i "/image:/ s|\(shravankumarp/spring-boot-app\):[0-9]*|shravankumarp/spring-boot-app:${BUILD_NUMBER}|g" spring-boot-app-manifests/deployment.yml
+                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-manifests/deployment.yml
                         git pull origin main
                         git add .
                         git commit -m "Update deployment image to version ${BUILD_NUMBER}"
