--- a/spring-boot-app/pom.xml
+++ b/spring-boot-app/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.Shravankumar</groupId>
+    <groupId>com.shravankumar</groupId>
     <artifactId>spring-boot-demo</artifactId>
     <version>1.0</version>
 
@@ -73,7 +73,7 @@
     <distributionManagement>
         <repository>
             <id>spring-boot-app</id>
-            <url>http://13.234.231.57:8081/repository/spring-boot-app/</url>
+            <url>http://13.233.124.191:8081/repository/spring-boot-app/</url>
         </repository>
     </distributionManagement>
 
