--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -127,7 +127,14 @@ pipeline {
             }
         }
 
-        
+        stage('Scan Docker Image') {
+            steps {
+                echo 'Scanning Docker image using Trivy...'
+                sh '''
+                   trivy image ${DOCKER_IMAGE} > trivyimage.txt
+                '''
+            }
+        }
 
         stage('Push Image') {
             steps {
