--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -30,41 +30,23 @@ pipeline {
             }
         }
 
-        stage('Build') {
+        stage('Build & Test') {
             steps {
                 echo 'Building the project...'
                 sh '''
                    cd spring-boot-app
                    mvn clean compile
-                '''
-            }
-        }
-
-        stage('Test') {
-            steps {
-                echo 'Running tests...'
-                sh '''
-                   cd spring-boot-app
                    mvn test
                 '''
             }
         }
 
-        stage('Package') {
+        stage('Package & Install') {
             steps {
                 echo 'Packaging the project...'
                 sh '''
                    cd spring-boot-app
                    mvn package
-                '''
-            }
-        }
-
-        stage('Install') {
-            steps {
-                echo 'Installing the package to local Maven repository...'
-                sh '''
-                   cd spring-boot-app
                    mvn install
                 '''
             }
