--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -26,7 +26,7 @@ pipeline {
         stage('Git Checkout') {
             steps {
                 echo "Checking out code from Git..."
-                
+                git branch: 'main', url: 'https://github.com/Shravankumar1989/CI-CD-Pipeline.git'
             }
         }
 
